# inference-sdk-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.bedrock/: state.db-wal  test_state.db-wal
.github/workflows/: ci.yml  fuzz-smoke.yml
anthropic/: Cargo.toml
anthropic/examples/: anthropic_agent.rs  anthropic_cli.rs  anthropic_simple.rs  anthropic_stream.rs  cli.rs  generic.rs  minimax_tool_roundtrip.rs  simple.rs  stream.rs
anthropic/src/: client.rs  config.rs  error.rs  lib.rs  normalization.rs
anthropic/src/resources/: messages.rs
anthropic/src/types/: message.rs  mod.rs
anthropic/tests/: integration_tests.rs  minimax_compat.rs  provider_contract.rs
core/: Cargo.toml  perf_baseline.json
core/src/: config.rs  error.rs  http.rs  lib.rs  stream_contract.rs
core/tests/: perf_budget.rs  property_stream.rs  stream_contract.rs  streaming.rs
docs/: FUZZING.md  MIGRATIONS.md  PERFORMANCE_GUARDS.md  PROVIDER_IMPLEMENTATION_GUIDE.md  STREAM_EVENT_CONTRACT.md
fuzz/: Cargo.toml
fuzz/corpus/core_event_stream/: basic_sequence.txt  invalid_order.txt
fuzz/corpus/provider_stream_json/: anthropic_tool_sequence.jsonl  openai_usage_sequence.jsonl
fuzz/fuzz_targets/: core_event_stream.rs  provider_stream_json.rs
openai/: Cargo.toml  README.md  SKILL.md
openai/examples/: openai_simple.rs  openai_stream.rs
openai/src/: client.rs  lib.rs  normalization.rs
openai/src/resources/: chat.rs  embeddings.rs
openai/src/types/: chat.rs  embedding.rs
openai/tests/: integration_tests.rs  provider_contract.rs
registry/: Cargo.toml
registry/src/: lib.rs
scripts/: check_release_policy.sh
