[workspace]
members = ["core", "anthropic", "openai"]
resolver = "2"

[workspace.dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["time", "full"] }
thiserror = "1.0"
futures = "0.3"
eventsource-stream = "0.2"
bon = "3.8.2"
wiremock = "0.6.5"
dotenv = "0.15"
clap = { version = "4.5", features = ["derive"] }
inference-sdk-core = { path = "./core" }
