[workspace]
members = ["core", "anthropic", "openai"]
resolver = "2"

[workspace.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", default-features = false, features = ["time"] }
thiserror = "1.0"
tracing = "0.1"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
eventsource-stream = "0.2"
bon = "3.8.2"
wiremock = "0.6.5"
dotenvy = "0.15"
clap = { version = "4.5", default-features = false, features = ["derive", "std"] }
inference-sdk-core = { path = "./core" }
