[package]
name = "anthropic-sdk"
version = "0.4.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
inference-sdk-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
eventsource-stream = { workspace = true }
bon = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
dotenv = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true }
