[package]
name = "inference-sdk-core"
version = "0.4.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
bon = { workspace = true }
