[package]
name = "inference-sdk-core"
version = "0.4.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
bon = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
