[package]
name = "openai-sdk"
version = "0.6.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
inference-sdk-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
eventsource-stream = { workspace = true }
bon = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
